- Add vacuumd configuration for deleting old statistics reports. - Add log4j entry for statsd log file. - Use AbstractTransactionalTemporaryDatabaseSpringContextTests for the   Poller*IntegrationTest tests. - Start work on a way to use the shipping configuration files in   opennms-daemon/src/main/filtered/etc for integration tests while   allowing for individual config files to be overridden.  This includes   pulling the Resource for configuration files in the DAO context into   their own beans that can be overridden.  Used for Poller*IntegrationTest. - Created a Spring-friendly DefaultPollerConfigDao that wraps the   PollerConfigFactory and takes a Resource for configuration (in support of   the above item). - Get rid of BaseIntegrationTest--it isn't used anymore.  The   AbstractTransactionalTemporaryDatabaseSpringContextTests class should be   used instead, although we could stand to have an subclass of that which   takes care of the common DAO setup needs. - Implement a node walker based on a filter in the (Jdbc)FilterDao - Change the statsd config file so that the class of just the final   visitor (AttributeStatisticVisitor) is specified. - Add support to statsd for filters. - Start working on better exception handling when running a statsd report. - Allow setupIpLike on PopulatedTemporaryDatabaseTestCase to be set on   a per-test case basis by overridding a Spring bean. - Cleanup the eXtreme Components table look so it looks identical to the   OpenNMS style with a header and table.  Required adding a few classes   so we could customize styles on tables. - Use eXtreme Components table for statistics reports web pages. - Implement a SpringServiceDaemon that the Spring-loaded daemons that are   loaded with AbstractSpringContextJmxServiceDaemon and use it in statsd   and the remote poller back end. - Pull eventIpcManager bean into an applicationContext-daemon that is an   extension of the DAO context and is used as the base context for daemons.

--- a/opennms-daemon/src/main/filtered/etc/log4j.properties
+++ b/opennms-daemon/src/main/filtered/etc/log4j.properties
@@ -336,3 +336,12 @@ log4j.appender.MAP.File=@install.daemonlogs.dir@/web-map.log
 log4j.appender.MAP.layout=org.apache.log4j.PatternLayout
 log4j.appender.MAP.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
+# Statsd
+log4j.category.OpenNMS.Statsd=DEBUG, STATSD
+log4j.additivity.OpenNMS.Statsd=false
+log4j.appender.STATSD=org.apache.log4j.RollingFileAppender
+log4j.appender.STATSD.MaxFileSize=100MB
+log4j.appender.STATSD.MaxBackupIndex=4
+log4j.appender.STATSD.File=@install.daemonlogs.dir@/statsd.log
+log4j.appender.STATSD.layout=org.apache.log4j.PatternLayout
+log4j.appender.STATSD.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
