--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,11 @@
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>2.1</version>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-eclipse-plugin</artifactId>
         <version>2.3</version>
       </plugin>
@@ -390,7 +395,6 @@ opennms.home = ${opennms.home}
       <plugin>
         <inherited>false</inherited>
         <artifactId>maven-assembly-plugin</artifactId>
-        <version>2.1</version>
         <configuration>
           <descriptors>
             <descriptor>src/assembly/dist.xml</descriptor>
