add tticket buttons

--- a/opennms-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/opennms-webapp/src/main/webapp/WEB-INF/web.xml
@@ -847,6 +847,14 @@
     <url-pattern>/alarm/query</url-pattern>
   </servlet-mapping>
   <servlet-mapping>
+    <servlet-name>dispatcher</servlet-name>
+    <url-pattern>/alarm/ticket</url-pattern>
+  </servlet-mapping>
+  <!--  servlet-mapping>
+    <servlet-name>dispatcher</servlet-name>
+    <url-pattern>/alarm/*</url-pattern>
+  </servlet-mapping -->
+  <servlet-mapping>
     <servlet-name>filterVulnerability</servlet-name>
     <url-pattern>/vulnerability/list</url-pattern>
   </servlet-mapping>    
@@ -1115,7 +1123,7 @@
     <servlet-name>gwtDispatcher</servlet-name>
     <url-pattern>*.gwt</url-pattern>
   </servlet-mapping>
-
+  
   <servlet-mapping>
         <servlet-name>dispatcher</servlet-name>
         <url-pattern>*.htm</url-pattern>
