make the 'enabling' work correctly... make sure update and close include ticketid

--- a/opennms-daemon/src/main/filtered/etc/log4j.properties
+++ b/opennms-daemon/src/main/filtered/etc/log4j.properties
@@ -40,6 +40,15 @@ log4j.logger.org.springframework=INFO
 log4j.logger.org.hibernate=INFO
 log4j.logger.org.hibernate.SQL=DEBUG
 
+# Ticketer
+log4j.category.OpenNMS.TroubleTicketer=DEBUG, TICKETER
+log4j.additivity.OpenNMS.TroubleTicketer=false
+log4j.appender.TICKETER=org.apache.log4j.RollingFileAppender
+log4j.appender.TICKETER.MaxFileSize=100MB
+log4j.appender.TICKETER.MaxBackupIndex=4
+log4j.appender.TICKETER.File=/space/svn/trunk/target/opennms-1.3.3-SNAPSHOT/logs/daemon/ticketer.log
+log4j.appender.TICKETER.layout=org.apache.log4j.PatternLayout
+log4j.appender.TICKETER.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
 # Eventd
 log4j.category.OpenNMS.Eventd=DEBUG, EVENTD
