add flag for enabling/disabling trouble ticketing in the alarm details page

--- a/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
+++ b/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
@@ -13,3 +13,10 @@ rrd.binary=@install.rrdtool.bin@
 version.full=@install.version@
 ksc.default.graphsPerLine=1
 distributed.layoutApplicationsVertically=false
+
+#
+# Set this property to enable the creating of trouble tickets from the alarm details page.
+# In order to set this a trouble ticketing plugin must be configured in the opennms daemon.
+#
+# The default value is false (ie trouble tickets cannot be created via the alarm details page)
+# opennms.alarmTroubleTicketEnabled = false
