Fix 1886 -- ticketer.log path not parameterized

--- a/opennms-daemon/src/main/filtered/etc/log4j.properties
+++ b/opennms-daemon/src/main/filtered/etc/log4j.properties
@@ -46,7 +46,7 @@ log4j.additivity.OpenNMS.TroubleTicketer=false
 log4j.appender.TICKETER=org.apache.log4j.RollingFileAppender
 log4j.appender.TICKETER.MaxFileSize=100MB
 log4j.appender.TICKETER.MaxBackupIndex=4
-log4j.appender.TICKETER.File=/space/svn/trunk/target/opennms-1.3.3-SNAPSHOT/logs/daemon/ticketer.log
+log4j.appender.TICKETER.File=@install.daemonlogs.dir@/ticketer.log
 log4j.appender.TICKETER.layout=org.apache.log4j.PatternLayout
 log4j.appender.TICKETER.layout.ConversionPattern=%d %-5p [%t] %c{1}: %m%n
 
