--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -2479,7 +2479,7 @@ report.netsnmp.disk1percent.name=Percentage Disk Space on 1
 report.netsnmp.disk1percent.columns=ns-disk-1-pct
 report.netsnmp.disk1percent.type=nodeSnmp
 report.netsnmp.disk1percent.propertiesValues=ns-disk-1-name
-report.netsnmp.disk1percent.command=--title="Percentage Disk Space on {ns-disk-1-name}" \
+report.netsnmp.disk1percent.command=--title="Percent Space Used: {ns-disk-1-name}" \
  DEF:dpercent={rrd1}:ns-disk-1-pct:AVERAGE \
  LINE2:dpercent#0000ff:"% Disk Space Used" \
  GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
@@ -2508,7 +2508,7 @@ report.netsnmp.disk2percent.name=Percentage Disk Space on 2
 report.netsnmp.disk2percent.columns=ns-disk-2-pct
 report.netsnmp.disk2percent.type=nodeSnmp
 report.netsnmp.disk2percent.propertiesValues=ns-disk-2-name
-report.netsnmp.disk2percent.command=--title="Percentage Disk Space on {ns-disk-2-name}" \
+report.netsnmp.disk2percent.command=--title="Percent Space Used: {ns-disk-2-name}" \
  DEF:dpercent={rrd1}:ns-disk-2-pct:AVERAGE \
  LINE2:dpercent#0000ff:"% Disk Space Used" \
  GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
@@ -2537,7 +2537,7 @@ report.netsnmp.disk3percent.name=Percentage Disk Space on 3
 report.netsnmp.disk3percent.columns=ns-disk-3-pct
 report.netsnmp.disk3percent.type=nodeSnmp
 report.netsnmp.disk3percent.propertiesValues=ns-disk-3-name
-report.netsnmp.disk3percent.command=--title="Percentage Disk Space on {ns-disk-3-name}" \
+report.netsnmp.disk3percent.command=--title="Percent Space Used: {ns-disk-3-name}" \
  DEF:dpercent={rrd1}:ns-disk-3-pct:AVERAGE \
  LINE2:dpercent#0000ff:"% Disk Space Used" \
  GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
@@ -2566,7 +2566,7 @@ report.netsnmp.disk4percent.name=Percentage Disk Space on 4
 report.netsnmp.disk4percent.columns=ns-disk-4-pct
 report.netsnmp.disk4percent.type=nodeSnmp
 report.netsnmp.disk4percent.propertiesValues=ns-disk-4-name
-report.netsnmp.disk4percent.command=--title="Percentage Disk Space on {ns-disk-4-name}" \
+report.netsnmp.disk4percent.command=--title="Percent Space Used: {ns-disk-4-name}" \
  DEF:dpercent={rrd1}:ns-disk-4-pct:AVERAGE \
  LINE2:dpercent#0000ff:"% Disk Space Used" \
  GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
@@ -2595,7 +2595,7 @@ report.netsnmp.disk5percent.name=Percentage Disk Space on 5
 report.netsnmp.disk5percent.columns=ns-disk-5-pct
 report.netsnmp.disk5percent.type=nodeSnmp
 report.netsnmp.disk5percent.propertiesValues=ns-disk-5-name
-report.netsnmp.disk5percent.command=--title="Percentage Disk Space on {ns-disk-5-name}" \
+report.netsnmp.disk5percent.command=--title="Percent Space Used: {ns-disk-5-name}" \
  DEF:dpercent={rrd1}:ns-disk-5-pct:AVERAGE \
  LINE2:dpercent#0000ff:"% Disk Space Used" \
  GPRINT:dpercent:AVERAGE:"Avg  \\: %8.2lf %s" \
