Move mib2.HCbits to the top of the reports list and if it can be graphed on the resource, have it suppress mib2.bits.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -34,8 +34,8 @@ output.mime=image/png
 #       has been placed last so that it looks better. Everything else
 #       should be in alphabetical order.
 
-reports=mib2.bits, mib2.percentdiscards, mib2.percenterrors, \
-mib2.discards, mib2.errors, mib2.HCbits, mib2.packets, \
+reports=mib2.HCbits, mib2.bits, mib2.percentdiscards, mib2.percenterrors, \
+mib2.discards, mib2.errors, mib2.packets, \
 mib2.tcpopen, mib2.tcpcurrent, mib2.tcperrs, mib2.tcpsegs, \
 mib2.traffic-inout, \
 mib2.ups-charge, mib2.ups-time, \
@@ -219,6 +219,7 @@ report.mib2.errors.command=--title="Errors In/Out" \
  GPRINT:octOut:MAX:"Max  \\: %8.2lf %s\\n"  
 
 report.mib2.HCbits.name=Bits In/Out (High Speed)
+report.mib2.HCbits.suppress=mib2.bits
 report.mib2.HCbits.columns=ifHCInOctets,ifHCOutOctets
 report.mib2.HCbits.type=interfaceSnmp
 report.mib2.HCbits.command=--title="Bits In/Out (High Speed)" \
