Added the new log subdirectories.

--- a/tools/packages/opennms/opennms.spec.in
+++ b/tools/packages/opennms/opennms.spec.in
@@ -321,6 +321,8 @@ echo "=== UNTAR BUILD COMPLETED ==="
 
 mkdir -p $RPM_BUILD_ROOT/var/opennms
 mkdir -p $RPM_BUILD_ROOT/var/log/opennms
+mkdir -p $RPM_BUILD_ROOT/var/log/opennms/daemon
+mkdir -p $RPM_BUILD_ROOT/var/log/opennms/webapps
 
 ### XXX is this needed?  (Most of) the current scripts don't use OPENNMS_HOME.
 ### /etc/profile.d
