Separate org.opennms.netmgt.vmmgr.Manager into different classes for the various jobs that it performs.  The command-line app is now Controller (and it has its own log4j configuration).  Startup is handled by Starter, and the common JMX code is in Invoker, InvokerService, and InvokerResult.  Moved some property setting code from the Bootstrap class into Starter because it really only belongs there.

--- a/pom.xml
+++ b/pom.xml
@@ -460,6 +460,7 @@ opennms.home = ${opennms.home}
     <install.etc.dir>${install.dir}/etc</install.etc.dir>
     <install.logs.dir>${install.dir}/logs</install.logs.dir>
     <install.daemonlogs.dir>${install.logs.dir}/daemon</install.daemonlogs.dir>
+    <install.controllerlogs.dir>${install.logs.dir}/controller</install.controllerlogs.dir>
     <install.webapplogs.dir>${install.logs.dir}/webapp</install.webapplogs.dir>
     <install.pid.file>${install.daemonlogs.dir}/opennms.pid</install.pid.file>
 
