Fixed a small problem in the HR storage graph noticed by Reinhard.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -620,7 +620,7 @@ report.mib2.storage.usage.command=--title="Storage Utilization on {hrStorageDesc
  DEF:used={rrd2}:hrStorageUsed:AVERAGE \
  DEF:units={rrd3}:hrStorageAllocUnits:AVERAGE \
  CDEF:totalBytes=total,units,* \
- CDEF:usedBytes=total,used,-,units,* \
+ CDEF:usedBytes=used,units,* \
  LINE2:totalBytes#0000ff:"Total" \
  GPRINT:totalBytes:AVERAGE:" Avg  \\: %8.2lf %s" \
  GPRINT:totalBytes:MIN:"Min  \\: %8.2lf %s" \
