--- a/opennms-daemon/src/main/filtered/etc/response-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/response-graph.properties
@@ -19,7 +19,7 @@ output.mime=image/png
 #########################################################################
 
 #report keys, list ALL prefab reports here!
-reports=icmp, avail, dhcp, dns, http, http-8000, http-8080, pop3, radius, smtp, ssh, jboss, snmp
+reports=icmp, avail, dhcp, dns, http, http-8000, http-8080, pop3, radius, smtp, ssh, jboss, snmp, ldap
 
 # values available to prefab reports:
 # {rrd1}, {rrd2}, {rrd3}, ...  must match the datasources exactly
@@ -175,6 +175,18 @@ report.snmp.name=SNMP
 report.snmp.columns=snmp
 report.snmp.type=responseTime, distributedStatus
 report.snmp.command=--title="SNMP Response Time" \
+ --vertical-label="Seconds" \
+ DEF:rtMills={rrd1}:snmp:AVERAGE \
+ CDEF:rt=rtMills,1000,/ \
+ LINE1:rt#0000ff:"Response Time" \
+ GPRINT:rt:AVERAGE:" Avg  \\: %8.2lf %s" \
+ GPRINT:rt:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:rt:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.ldap.name=LDAP
+report.ldap.columns=ldap
+report.ldap.type=responseTime, distributedStatus
+report.ldap.command=--title="LDAP Response Time" \
  --vertical-label="Seconds" \
  DEF:rtMills={rrd1}:snmp:AVERAGE \
  CDEF:rt=rtMills,1000,/ \
