--- a/opennms-daemon/src/main/filtered/etc/opennms.properties
+++ b/opennms-daemon/src/main/filtered/etc/opennms.properties
@@ -56,3 +56,10 @@ rrd.base.dir=@install.share.dir@/rrd
 
 # RRD binary path (only used if the JniRrdStrategy is used)
 rrd.binary=@install.rrdtool.bin@
+
+#
+# The ticket plugin implementation to use to create tickets via the Alarm details
+# pages (if configured).  The NullTicketerPlugin just does nothing when attempting
+# to create tickets.
+opennms.ticketer.plugin=org.opennms.netmgt.ticketd.NullTicketerPlugin
+
