Three fixes: Bug 1403, a type in response-graph.properties, and some zoom alignment fixes.

--- a/opennms-daemon/src/main/filtered/etc/response-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/response-graph.properties
@@ -188,7 +188,7 @@ report.ldap.columns=ldap
 report.ldap.type=responseTime, distributedStatus
 report.ldap.command=--title="LDAP Response Time" \
  --vertical-label="Seconds" \
- DEF:rtMills={rrd1}:snmp:AVERAGE \
+ DEF:rtMills={rrd1}:ldap:AVERAGE \
  CDEF:rt=rtMills,1000,/ \
  LINE1:rt#0000ff:"Response Time" \
  GPRINT:rt:AVERAGE:" Avg  \\: %8.2lf %s" \
