build as bundles

--- a/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-macosx/pom.xml
+++ b/opennms-icmp/opennms-icmp-jni/opennms-icmp-jni-macosx/pom.xml
@@ -42,7 +42,7 @@
             </source>
           </sources>
           <linkerStartOptions>
-            <linkerStartOption>-dynamiclib ${build.jni.compiler.arg} ${build.jni.linker.arg} -lc -ldl</linkerStartOption>
+            <linkerStartOption>-bundle ${build.jni.compiler.arg} ${build.jni.linker.arg} -lc -ldl</linkerStartOption>
           </linkerStartOptions>
           <javahOS>${platform.javahOS}</javahOS>
           <jdkIncludePath>${platform.jdk.include.dir}</jdkIncludePath>
