added sample TT link template property

--- a/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
+++ b/opennms-webapp/src/main/web-filtered/WEB-INF/configuration.properties
@@ -20,3 +20,7 @@ distributed.layoutApplicationsVertically=false
 #
 # The default value is false (ie trouble tickets cannot be created via the alarm details page)
 # opennms.alarmTroubleTicketEnabled = false
+
+# Example for templating an HTML reference with the ticket ID 
+# This is an example for use with the CentricCRM Plugin
+#opennms.alarmTroubleTicketLinkTemplate = <a href="http://localhost:8080/centric/TroubleTickets.do?command=Details&id=${id}">${id}</a>
