--- a/opennms-tools/centric-troubleticketer/pom.xml
+++ b/opennms-tools/centric-troubleticketer/pom.xml
@@ -8,6 +8,20 @@
   <artifactId>centric-troubleticketer</artifactId>
   <packaging>jar</packaging>
   <name>OpenNMS Centric Trouble Ticketer</name>
+  <build>
+    <plugins>
+      <plugin>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <configuration>
+          <descriptors>
+            <descriptor>src/main/assembly/centric-bundle.xml</descriptor>
+          </descriptors>
+          <appendAssemblyId>false</appendAssemblyId>
+          <tarLongFileMode>gnu</tarLongFileMode>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
   <dependencies>
     <dependency>
       <groupId>com.centriccrm</groupId>
@@ -19,6 +33,7 @@
     <dependency>
       <groupId>org.opennms</groupId>
       <artifactId>opennms-services</artifactId>
+      <scope>provided</scope>
     </dependency>
   </dependencies>
 </project>
