Add mibObjs for UCD/Net-SNMP diskIOTable stats -- reviewed by djgregor and joed

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -88,6 +88,7 @@ sun.swap, sun.swapping, \
 netsnmp.memStats, \
 netsnmp.cpuUsage, \
 netsnmp.cpuStats, \
+netsnmp.diskio.bytes, netsnmp.diskio.ops, netsnmp.diskio.opsize, \
 free.memory,jvm.thread.count,jvm.thread.daemon,jvm.thread.peak, jboss.http.tp, jboss.defaultDS, \
 jboss.servletstatus.time, jboss.servletstatus.cnt, jboss.grp.tp, jboss.grp.time, jboss.grp.cnt, \
 airport.numClients,iisTraffic,iisRequests,exchangeMessages,exchangeBytes, \
@@ -2454,6 +2455,57 @@ report.netsnmp.cpuUsage.command=--title="CPU Usage" \
  GPRINT:interrupt:MIN:"Min  \\: %8.2lf %s" \
  GPRINT:interrupt:MAX:"Max  \\: %8.2lf %s\\n"
 
+report.netsnmp.diskio.bytes.name=Disk IO Bytes
+report.netsnmp.diskio.bytes.columns=diskIONRead,diskIONWritten
+report.netsnmp.diskio.bytes.type=diskIOIndex
+report.netsnmp.diskio.bytes.command=--title="Disk IO Bytes" \
+ DEF:nread={rrd1}:diskIONRead:AVERAGE \
+ DEF:nwritten={rrd2}:diskIONWritten:AVERAGE \
+ CDEF:nwritteninv=nwritten,-1,* \
+ AREA:nread#00ff00:"Read" \
+ GPRINT:nread:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:nread:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:nread:MAX:"Max \\: %10.2lf %s\\n" \
+ AREA:nwritteninv#0000ff:"Written" \
+ GPRINT:nwritten:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:nwritten:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:nwritten:MAX:"Max \\: %10.2lf %s\\n"
+
+report.netsnmp.diskio.ops.name=Disk IO Operations
+report.netsnmp.diskio.ops.columns=diskIOReads,diskIOWrites
+report.netsnmp.diskio.ops.type=diskIOIndex
+report.netsnmp.diskio.ops.command=--title="Disk IO Operations" \
+ DEF:reads={rrd1}:diskIOReads:AVERAGE \
+ DEF:writes={rrd2}:diskIOWrites:AVERAGE \
+ CDEF:writesinv=writes,-1,* \
+ AREA:reads#00ff00:"Reads" \
+ GPRINT:reads:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:reads:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:reads:MAX:"Max \\: %10.2lf %s\\n" \
+ AREA:writesinv#0000ff:"Writes" \
+ GPRINT:writes:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:writes:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:writes:MAX:"Max \\: %10.2lf %s\\n"
+
+report.netsnmp.diskio.opsize.name=Disk IO Size
+report.netsnmp.diskio.opsize.columns=diskIONRead,diskIONWritten,diskIOReads,diskIOWrites
+report.netsnmp.diskio.opsize.type=diskIOIndex
+report.netsnmp.diskio.opsize.command=--title="Disk IO Size" \
+ DEF:nread={rrd1}:diskIONRead:AVERAGE \
+ DEF:nwritten={rrd2}:diskIONWritten:AVERAGE \
+ DEF:reads={rrd3}:diskIOReads:AVERAGE \
+ DEF:writes={rrd4}:diskIOWrites:AVERAGE \
+ CDEF:readsize=nread,reads,/ \
+ CDEF:writesize=nwritten,writes,/ \
+ CDEF:writesizeinv=nwritten,writes,/,-1,* \
+ AREA:readsize#00ff00:"Read Size" \
+ GPRINT:readsize:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:readsize:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:readsize:MAX:"Max \\: %10.2lf %s\\n" \
+ AREA:writesizeinv#0000ff:"Write Size" \
+ GPRINT:writesize:AVERAGE:"Avg \\: %10.2lf %s" \
+ GPRINT:writesize:MIN:"Min \\: %10.2lf %s" \
+ GPRINT:writesize:MAX:"Max \\: %10.2lf %s\\n"
 
 report.netsnmp.disk1.name=Disk Space on 1 
 report.netsnmp.disk1.columns=ns-disk-1-tot, ns-disk-1-used
