Add Cisco IPSLA / RTTMON OIDs and graph definitions. Reviewed by drv4doe, brozow

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -56,6 +56,12 @@ cisco.dropsinout, cisco.freemem, \
 cisco.firewall, cisco.memory, \
 cisco.pkts, cisco.protoin, cisco.protoout, cisco.temp, \
 cisco.4bb, cisco.80bb, cisco.256bb, cisco.1550bb, \
+cisco.rttmon.jitter.rtt, cisco.rttmon.jitter.icpif, cisco.rttmon.jitter.mos, \
+cisco.rttmon.jitter.avgj, cisco.rttmon.jitter.owavg, \
+cisco.rttmon.jitter.owmax, cisco.rttmon.jitter.owmin, \
+cisco.rttmon.jitter.owstddev, \
+cisco.rttmon.jitter.maxjds, cisco.rttmon.jitter.maxjsd, \
+cisco.rttmon.jitter.pktloss, \
 adsl.attenuation, adsl.power, adsl.snr, \
 colubris.users, \
 extreme.currentTemp, \
@@ -3965,4 +3971,200 @@ report.mailmarshal.command=--title="MailMarshal Stats" \
  GPRINT:relay:AVERAGE:"Avg:%3.2lf" \
  GPRINT:relay:MAX:"Max:%3.2lf" \
  GPRINT:relay:MIN:"Min:%3.2lf" 
+
+report.cisco.rttmon.jitter.rtt.name=RTT (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.rtt.columns=jitterRTTSum,jitterNumRTT
+report.cisco.rttmon.jitter.rtt.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.rtt.command=--title="Round-Trip Time (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label ms \
+ DEF:sumRTT={rrd1}:jitterRTTSum:AVERAGE \
+ DEF:numRTT={rrd2}:jitterNumRTT:AVERAGE \
+ CDEF:avgRTT=sumRTT,numRTT,/ \
+ LINE2:avgRTT#0000ff:"Round-Trip Time (ms)  " \
+ GPRINT:avgRTT:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:avgRTT:MIN:"Min  \\: %8.2lf %s" \ 
+ GPRINT:avgRTT:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.rttmon.jitter.icpif.name=ICPIF (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.icpif.columns=jitterICPIF
+report.cisco.rttmon.jitter.icpif.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.icpif.command=--title="ICPIF (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label ICPIF \
+ DEF:ICPIF={rrd1}:jitterICPIF:AVERAGE \
+ LINE2:ICPIF#0000ff:"Actual  " \
+ GPRINT:ICPIF:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:ICPIF:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:ICPIF:MAX:"Max  \\: %8.2lf %s\\n" \
+ COMMENT:"[Guideline: Good 10; Adequate 20; Limiting 30]\\n"
+
+report.cisco.rttmon.jitter.mos.name=MOS (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.mos.columns=jitterMOS
+report.cisco.rttmon.jitter.mos.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.mos.command=--title="Estimated MOS (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label Estimated MOS \
+ DEF:mosRaw={rrd1}:jitterMOS:AVERAGE \
+ CDEF:MOS=mosRaw,100,/ \
+ AREA:MOS#0000ff:"MOS  " \
+ GPRINT:MOS:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:MOS:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:MOS:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.rttmon.jitter.owavg.name=Avg One-Way Time (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.owavg.columns=jitterOWSumDS,jitterOWSumSD,jitterNumOW
+report.cisco.rttmon.jitter.owavg.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.owavg.command=--title="Avg One-Way Time (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label ms \
+ DEF:sumDS={rrd1}:jitterOWSumDS:AVERAGE \
+ DEF:sumSD={rrd2}:jitterOWSumSD:AVERAGE \
+ DEF:numOW={rrd3}:jitterNumOW:AVERAGE \
+ CDEF:timeDS=sumDS,numOW,/ \
+ CDEF:timeSD=sumSD,numOW,/,-1,* \
+ AREA:timeDS#00ff00:"In  " \
+ GPRINT:timeDS:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:timeDS:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:timeDS:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:timeSD#0000ff:"Out  " \
+ GPRINT:timeSD:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:timeSD:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:timeSD:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.rttmon.jitter.owmax.name=Max One-Way Time (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.owmax.columns=jitterOWMaxDS,jitterOWMaxSD,jitterNumOW
+report.cisco.rttmon.jitter.owmax.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.owmax.command=--title="Max One-Way Time (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label ms \
+ DEF:maxDS={rrd1}:jitterOWMaxDS:AVERAGE \
+ DEF:maxSDRaw={rrd2}:jitterOWMaxSD:AVERAGE \
+ DEF:numOW={rrd3}:jitterNumOW:AVERAGE \
+ CDEF:maxSD=maxSDRaw,-1,* \
+ AREA:maxDS#00ff00:"In  " \
+ GPRINT:maxDS:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:maxDS:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:maxDS:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:maxSD#0000ff:"Out  " \
+ GPRINT:maxSD:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:maxSD:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:maxSD:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.rttmon.jitter.owmin.name=Min One-Way Time (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.owmin.columns=jitterOWMinDS,jitterOWMinSD,jitterNumOW
+report.cisco.rttmon.jitter.owmin.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.owmin.command=--title="Min One-Way Time (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label ms \
+ DEF:minDS={rrd1}:jitterOWMinDS:AVERAGE \
+ DEF:minSDRaw={rrd2}:jitterOWMinSD:AVERAGE \
+ DEF:numOW={rrd3}:jitterNumOW:AVERAGE \
+ CDEF:minSD=minSDRaw,-1,* \
+ AREA:minDS#00ff00:"In  " \
+ GPRINT:minDS:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:minDS:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:minDS:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:minSD#0000ff:"Out  " \
+ GPRINT:minSD:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:minSD:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:minSD:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.rttmon.jitter.owstddev.name=One-Way Time StdDev (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.owstddev.columns=jitterOWSum2DS,jitterOWSumDS,jitterOWSum2SD,jitterOWSumSD,jitterNumOW
+report.cisco.rttmon.jitter.owstddev.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.owstddev.command=--title="One-Way Time StdDev (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label="StdDev (ms)" \
+ --units-exponent 0 \
+ DEF:sum2DS={rrd1}:jitterOWSum2DS:AVERAGE \
+ DEF:sumDS={rrd2}:jitterOWSumDS:AVERAGE \ 
+ DEF:sum2SD={rrd3}:jitterOWSum2SD:AVERAGE \
+ DEF:sumSD={rrd4}:jitterOWSumSD:AVERAGE \
+ DEF:numOW={rrd5}:jitterNumOW:AVERAGE \
+ CDEF:stddevIn=sum2DS,numOW,/,sumDS,numOW,/,sumDS,numOW,/,*,-,SQRT \
+ CDEF:stddevOut=sum2SD,numOW,/,sumSD,numOW,/,sumSD,numOW,/,*,-,SQRT,-1,* \
+ AREA:stddevIn#00ff00:"In  " \
+ GPRINT:stddevIn:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:stddevIn:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:stddevIn:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:stddevOut#0000ff:"Out  " \
+ GPRINT:stddevOut:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:stddevOut:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:stddevOut:MAX:"Max  \\: %8.2lf %s\\n"
+ 
+report.cisco.rttmon.jitter.avgj.name=Average Jitter (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.avgj.columns=jitterSumPosDS,jitterSumNegDS,jitterSumPosSD,jitterSumNegSD,jitterNumRTT
+report.cisco.rttmon.jitter.avgj.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.avgj.command=--title="Average Jitter (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label ms \
+ --units-exponent 0 \
+ DEF:sumPosDS={rrd1}:jitterSumPosDS:AVERAGE \
+ DEF:sumNegDS={rrd2}:jitterSumNegDS:AVERAGE \
+ DEF:sumPosSD={rrd3}:jitterSumPosSD:AVERAGE \
+ DEF:sumNegSD={rrd4}:jitterSumNegSD:AVERAGE \
+ DEF:numRTT={rrd5}:jitterNumRTT:AVERAGE \
+ CDEF:avgIn=sumPosDS,sumNegDS,+,numRTT,/ \
+ CDEF:avgOut=sumPosSD,sumNegSD,+,numRTT,/ \
+ LINE2:avgIn#00ff00:"In  " \
+ GPRINT:avgIn:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:avgIn:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:avgIn:MAX:"Max  \\: %8.2lf %s\\n" \
+ LINE2:avgOut#0000ff:"Out  " \
+ GPRINT:avgOut:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:avgOut:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:avgOut:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.rttmon.jitter.pktloss.name=Packet Loss (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.pktloss.columns=jitterPktLossSD,jitterPktLossDS,echoNumPackets
+report.cisco.rttmon.jitter.pktloss.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.pktloss.command=--title="Packet Loss (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label percent \
+ --lower-limit -100 --upper-limit 100 --rigid \
+ --units-exponent 0 \
+ DEF:pktLossSD={rrd1}:jitterPktLossSD:AVERAGE \
+ DEF:pktLossDS={rrd2}:jitterPktLossDS:AVERAGE \
+ DEF:numPackets={rrd3}:echoNumPackets:AVERAGE \
+ CDEF:pctLossIn=pktLossDS,numPackets,/,100,* \
+ CDEF:pctLossOut=pktLossSD,numPackets,/,100,*,-1,* \
+ AREA:pctLossIn#00ff00:"In  " \
+ GPRINT:pctLossIn:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:pctLossIn:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:pctLossIn:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:pctLossOut#0000ff:"Out  " \
+ GPRINT:pctLossOut:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:pctLossOut:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:pctLossOut:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.rttmon.jitter.maxjds.name=Max Jitter Dest-Src (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.maxjds.columns=jitterMaxNegDS,jitterMaxPosDS,jitterNumRTT
+report.cisco.rttmon.jitter.maxjds.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.maxjds.command=--title="Max Jitter Dest-Src (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label ms \
+ --units-exponent 0 \
+ DEF:maxNegDSRaw={rrd1}:jitterMaxNegDS:AVERAGE \
+ DEF:maxPosDS={rrd2}:jitterMaxPosDS:AVERAGE \
+ DEF:numRTT={rrd3}:jitterNumRTT:AVERAGE \
+ CDEF:maxNegDS=maxNegDSRaw,-1,* \
+ AREA:maxPosDS#00ff00:"Positive  " \
+ GPRINT:maxPosDS:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:maxPosDS:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:maxPosDS:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:maxNegDS#0000ff:"Negative  " \
+ GPRINT:maxNegDS:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:maxNegDS:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:maxNegDS:MAX:"Max  \\: %8.2lf %s\\n"
+
+report.cisco.rttmon.jitter.maxjsd.name=Max Jitter Src-Dest (Cisco IP SLA Jitter Monitor)
+report.cisco.rttmon.jitter.maxjsd.columns=jitterMaxNegSD,jitterMaxPosSD,jitterNumRTT
+report.cisco.rttmon.jitter.maxjsd.type=rttMonCtrlAdminIndex
+report.cisco.rttmon.jitter.maxjsd.command=--title="Max Jitter Src-Dest (Cisco IP SLA Jitter Monitor)" \
+ --vertical-label ms \
+ --units-exponent 0 \
+ DEF:maxNegSDRaw={rrd1}:jitterMaxNegSD:AVERAGE \
+ DEF:maxPosSD={rrd2}:jitterMaxPosSD:AVERAGE \ 
+ DEF:numRTT={rrd3}:jitterNumRTT:AVERAGE \
+ CDEF:maxNegSD=maxNegSDRaw,-1,* \
+ AREA:maxPosSD#00ff00:"Positive  " \
+ GPRINT:maxPosSD:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:maxPosSD:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:maxPosSD:MAX:"Max  \\: %8.2lf %s\\n" \
+ AREA:maxNegSD#0000ff:"Negative  " \
+ GPRINT:maxNegSD:AVERAGE:"Avg  \\: %8.2lf %s" \
+ GPRINT:maxNegSD:MIN:"Min  \\: %8.2lf %s" \
+ GPRINT:maxNegSD:MAX:"Max  \\: %8.2lf %s\\n"
+
 ## EOF
