JavaMailer bug fixes and enhancements

--- a/opennms-daemon/src/main/filtered/etc/javamail-configuration.properties
+++ b/opennms-daemon/src/main/filtered/etc/javamail-configuration.properties
@@ -13,19 +13,28 @@
 #org.opennms.core.utils.fromAddress=root@[127.0.0.1]
 
 #
-# This property defines SMTP Host.
+# These properties define the SMTP Host.
 #
 #org.opennms.core.utils.mailHost=127.0.0.1
 #org.opennms.core.utils.mailer=smtpsend
 #org.opennms.core.utils.transport=smtp
 #org.opennms.core.utils.debug=true
+#org.opennms.core.utils.smtpport=25
+#org.opennms.core.utils.smtpssl.enable=false
+#org.opennms.core.utils.quitwait=true
 #
-# This property defines Mail authentication.
-# The default setting is false
+# This property controls the use of the JMTA, the default is true
+#org.opennms.core.utils.useJMTA=true
+#
+# These properties define the Mail authentication.
+#
 #org.opennms.core.utils.authenticate=false
 #org.opennms.core.utils.authenticateUser="opennms"
 #org.opennms.core.utils.authenticatePassword="opennms"
+#org.opennms.core.utils.starttls.enable=false
 
-# This property controls the use of the JMTA, the
-# default is true
-#org.opennms.core.utils.useJMTA=true
+#
+# These properties configure message content
+#
+#org.opennms.core.utils.messageContentType=text/plain
+#org.opennms.core.utils.charset=us-ascii
