--- a/opennms-daemon/src/main/filtered/etc/examples/javamail-configuration.properties
+++ b/opennms-daemon/src/main/filtered/etc/examples/javamail-configuration.properties
@@ -1,33 +1,44 @@
+#################################
+#
 # Example to gmail
+# 
+# Sends using SSL connection on port 587
+# with authentication and text/html content-type
+# and UTF-8 charset
+#
+#org.opennms.core.utils.useJMTA=false
 #org.opennms.core.utils.transport=smtps
 #org.opennms.core.utils.mailHost=smtp.gmail.com
 #org.opennms.core.utils.smtpport=587
 #org.opennms.core.utils.smtpssl.enable=true
-#org.opennms.core.utils.useJMTA=false
-
 #org.opennms.core.utils.authenticate=true
 #org.opennms.core.utils.authenticateUser=xxxxxx@gmail.com
 #org.opennms.core.utils.authenticatePassword=xxxxxxx
 #org.opennms.core.utils.starttls.enable=true
-
 #org.opennms.core.utils.messageContentType=text/html
 #org.opennms.core.utils.charset=UTF-8
+#################################
 
-
-#Example to RR
+#################################
+#
+# Example to RR with no auth
+#
+#org.opennms.core.utils.useJMTA=false
 #org.opennms.core.utils.transport=smtp
 #org.opennms.core.utils.mailHost=smtp-server.nc.rr.com
-#org.opennms.core.utils.useJMTA=false
-
 #org.opennms.core.utils.charset=UTF-8
+#################################
 
-
-#Example AOL server (note: requires that mail be sent to aol.com recipient)
+#################################
+#
+# Example AOL server (note: requires that mail be sent to aol.com recipient)
+#
+#org.opennms.core.utils.useJMTA=false
 #org.opennms.core.utils.fromAddress=xxxxxxx@aol.com
 #org.opennms.core.utils.mailHost=smtp.aol.com
 #org.opennms.core.utils.smtpport=587
-#org.opennms.core.utils.useJMTA=false
 #org.opennms.core.utils.authenticate=true
 #org.opennms.core.utils.authenticateUser=xxxxxxx
 #org.opennms.core.utils.authenticatePassword=xxxxxxx
 #org.opennms.core.utils.starttls.enable=false
+#################################
