--- a/opennms-reporting/pom.xml
+++ b/opennms-reporting/pom.xml
@@ -100,6 +100,11 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
+      <groupId>postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
       <scope>runtime</scope>
