Add Asterisk channel scalars, and some Empire traps cleanup and alarm-data. Reviewed by mhuot.

--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -43,6 +43,7 @@ mib2printer.lifeCount, mib2printer.powerOnCount, \
 mib2.storage.usage, \
 apc.load, apc.percent, apc.temp, apc.time, apc.vac, \
 ascend.acalls, ascend.dcalls, \
+asterisk.activechan, asterisk.actbrchan, \
 checkpoint.pktsAccepted, checkpoint.pktsDropped, checkpoint.pktsLogged, checkpoint.pktsRejected, \
 checkpoint.pktsEncrypted, checkpoint.pktsEncryptedErr, checkpoint.pktsOtherErr, checkpoint.connections, \
 cisco.aironet.clientsassociated, cisco.altigaactsess, cisco.altigacpu, cisco.altigafanspeed, cisco.altigatemp, \
@@ -3971,6 +3972,36 @@ report.mailmarshal.command=--title="MailMarshal Stats" \
  GPRINT:relay:AVERAGE:"Avg:%3.2lf" \
  GPRINT:relay:MAX:"Max:%3.2lf" \
  GPRINT:relay:MIN:"Min:%3.2lf" 
+
+report.asterisk.activechan.name=Asterisk Active Channels
+report.asterisk.activechan.columns=astNumChannels
+report.asterisk.activechan.type=nodeSnmp
+report.asterisk.activechan.command=--title="Asterisk Active Channels" \
+ --lower-limit 0 \
+ DEF:active={rrd1}:astNumChannels:AVERAGE \
+ AREA:active#0000ff:"Active:" \
+ GPRINT:active:AVERAGE:"Avg:%3.2lf" \
+ GPRINT:active:MAX:"Max:%3.2lf" \
+ GPRINT:active:MIN:"Min:%3.2lf"
+
+report.asterisk.actbrchan.name=Asterisk Active & Bridged Channels
+report.asterisk.actbrchan.columns=astNumChannels,astNumChanBridge
+report.asterisk.actbrchan.type=nodeSnmp
+report.asterisk.actbrchan.command=--title="Asterisk Active & Bridged Channels" \
+ --lower-limit 0 \
+ DEF:active={rrd1}:astNumChannels:AVERAGE \
+ DEF:bridged={rrd2}:astNumChanBridge:AVERAGE \
+ CDEF:bridgedinv=bridged,-1,* \
+ AREA:active#00ff00:"Active:" \
+ GPRINT:active:AVERAGE:"Avg:%3.2lf" \
+ GPRINT:active:MAX:"Max:%3.2lf" \
+ GPRINT:active:MIN:"Min:%3.2lf\\n" \
+ AREA:bridgedinv#0000ff:"Bridged:" \
+ GPRINT:bridged:AVERAGE:"Avg:%3.2lf" \
+ GPRINT:bridged:MAX:"Max:%3.2lf" \
+ GPRINT:bridged:MIN:"Min:%3.2lf"
+
+=======
 
 report.cisco.rttmon.jitter.rtt.name=RTT (Cisco IP SLA Jitter Monitor)
 report.cisco.rttmon.jitter.rtt.columns=jitterRTTSum,jitterNumRTT
