--- a/opennms-services/src/test/resources/etc/javamail-configuration.properties
+++ b/opennms-services/src/test/resources/etc/javamail-configuration.properties
@@ -1,3 +1,7 @@
+#For crusiecontrol testing
+org.opennms.core.utils.mailHost=localhost
+org.opennms.core.utils.useJMTA=false
+
 # Example to gmail
 #org.opennms.core.utils.transport=smtps
 #org.opennms.core.utils.mailHost=smtp.gmail.com
