--- a/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
+++ b/opennms-daemon/src/main/filtered/etc/snmp-graph.properties
@@ -65,6 +65,8 @@ cisco.rttmon.jitter.maxjds, cisco.rttmon.jitter.maxjsd, \
 cisco.rttmon.jitter.pktloss, \
 adsl.attenuation, adsl.power, adsl.snr, \
 colubris.users, \
+empire.loadavg, empire.pageswaps, empire.syscalls, empire.sysinterrupts, empire.cpupct, empire.cpupctnowait, \
+empire.pgmon.procs, empire.pgmon.threads, empire.pgmon.memory, empire.pgmon.mempct, empire.pgmon.pagefaults, \
 extreme.currentTemp, \
 foundry.actualTemp, foundry.cpuUtil1Min, foundry.dynMemUtil, \
 hp.swbuffcorrupt, hp.swbufferfree, hp.swbufferinit, hp.swbuffermin, \
@@ -1634,6 +1636,179 @@ LINE2:usersThresh#54a4de:"Thresh" \
 GPRINT:usersThresh:AVERAGE:" Avg  \\: %8.2lf %s" \
 GPRINT:usersThresh:MIN:"Min  \\: %8.2lf %s" \
 GPRINT:usersThresh:MAX:"Max  \\: %8.2lf %s\\n"
+
+######
+###### Reports Generated for Empire (CA / Concord SystemEDGE) Agents
+######
+report.empire.loadavg.name=SystemEDGE Load Average
+report.empire.loadavg.columns=nhLoadavg1,nhLoadavg5,nhLoadavg15
+report.empire.loadavg.type=nodeSnmp
+report.empire.loadavg.command=--title="SystemEDGE Load Average" \
+ --lower-limit=0 --vertical-label="System Load" \
+ DEF:load1raw={rrd1}:nhLoadavg1:AVERAGE \
+ DEF:load5raw={rrd2}:nhLoadavg5:AVERAGE \
+ DEF:load15raw={rrd3}:nhLoadavg15:AVERAGE \
+ CDEF:load1=load1raw,100,/ \
+ CDEF:load5=load5raw,100,/ \
+ CDEF:load15=load15raw,100,/ \
+ LINE2:load1#00ff00:"1-Minute" \
+ GPRINT:load1:AVERAGE:"Average\\: %5.2lf" \
+ GPRINT:load1:MIN:"Minimum\\: %5.2lf" \
+ GPRINT:load1:MAX:"Maximum\\: %5.2lf\\n" \
+ LINE2:load5#0000ff:"5-Minute" \
+ GPRINT:load5:AVERAGE:"Average\\: %5.2lf" \
+ GPRINT:load5:MIN:"Minimum\\: %5.2lf" \
+ GPRINT:load5:MAX:"Maximum\\: %5.2lf\\n" \
+ LINE2:load15#ff0000:"15-Minute" \
+ GPRINT:load15:AVERAGE:"Average\\: %5.2lf" \
+ GPRINT:load15:MIN:"Minimum\\: %5.2lf" \
+ GPRINT:load15:MAX:"Maximum\\: %5.2lf"
+
+report.empire.pageswaps.name=Page Swaps (SystemEDGE)
+report.empire.pageswaps.columns=nhSwapIn,nhSwapOut
+report.empire.pageswaps.type=nodeSnmp
+report.empire.pageswaps.command=--title="Page Swaps (SystemEDGE)" \
+ --lower-limit=0 --vertical-label="Page Swaps" \
+ DEF:in={rrd1}:nhSwapIn:AVERAGE \
+ DEF:out={rrd2}:nhSwapOut:AVERAGE \
+ CDEF:outinv=out,-1,* \
+ AREA:in#00ff00:"In" \
+ GPRINT:in:AVERAGE:"Average\\: %8.2lf" \
+ GPRINT:in:MIN:"Minimum\\: %8.2lf" \
+ GPRINT:in:MAX:"Maximum\\: %8.2lf\\n" \
+ AREA:outinv#0000ff:"Out" \
+ GPRINT:out:AVERAGE:"Average\\: %8.2lf" \
+ GPRINT:out:MIN:"Minimum\\: %8.2lf" \
+ GPRINT:out:MAX:"Maximum\\: %8.2lf"
+
+report.empire.syscalls.name=System Calls (SystemEDGE)
+report.empire.syscalls.columns=nhSysContext
+report.empire.syscalls.type=nodeSnmp
+report.empire.syscalls.command=--title="System Calls (SystemEDGE)" \
+ --vertical-label="System Calls" \
+ DEF:calls={rrd1}:nhSysContext:AVERAGE \
+ AREA:calls#00ff00:"System Calls" \
+ GPRINT:calls:AVERAGE:"Avg\\: %8.2lf" \
+ GPRINT:calls:MIN:"Min\\: %8.2lf" \
+ GPRINT:calls:MAX:"Max\\: %8.2lf"
+
+report.empire.sysinterrupts.name=System Interrupts (SystemEDGE)
+report.empire.sysinterrupts.columns=nhSysInterrupts
+report.empire.sysinterrupts.type=nodeSnmp
+report.empire.sysinterrupts.command=--title="System Interrupts (SystemEDGE)" \
+ --vertical-label="Interrupts" \
+ DEF:intr={rrd1}:nhSysInterrupts:AVERAGE \
+ AREA:intr#00ff00:"System Interrupts" \
+ GPRINT:intr:AVERAGE:"Avg\\: %8.2lf" \
+ GPRINT:intr:MIN:"Min\\: %8.2lf" \
+ GPRINT:intr:MAX:"Max\\: %8.2lf"
+
+report.empire.cpupct.name=SystemEDGE CPU Totals
+report.empire.cpupct.columns=nhCpuTotalIdlePct,nhCpuTotalUserPct,nhCpuTotalSysPct,nhCpuTotalWaitPct
+report.empire.cpupct.type=nodeSnmp
+report.empire.cpupct.command=--title="SystemEDGE CPU Totals" \
+ --lower-limit 0 --upper-limit 100 --rigid --vertical-label="Percent CPU" \
+ DEF:idle={rrd1}:nhCpuTotalIdlePct:AVERAGE \
+ DEF:user={rrd2}:nhCpuTotalUserPct:AVERAGE \
+ DEF:system={rrd3}:nhCpuTotalSysPct:AVERAGE \
+ DEF:wait={rrd4}:nhCpuTotalWaitPct:AVERAGE \
+ AREA:user#0000ff:"User  " \
+ GPRINT:user:AVERAGE:"Avg\\: %3.2lf" \
+ GPRINT:user:MIN:"Min\\: %3.2lf" \
+ GPRINT:user:MAX:"Max\\: %3.2lf\\n" \
+ STACK:system#ffff00:"System" \
+ GPRINT:system:AVERAGE:"Avg\\: %3.2lf" \
+ GPRINT:system:MIN:"Min\\: %3.2lf" \
+ GPRINT:system:MAX:"Max\\: %3.2lf\\n" \
+ STACK:wait#ff0000:"Wait  " \
+ GPRINT:wait:AVERAGE:"Avg\\: %3.2lf" \
+ GPRINT:wait:MIN:"Min\\: %3.2lf" \
+ GPRINT:wait:MAX:"Max\\: %3.2lf\\n" \
+ STACK:idle#00ff00:"Idle  " \
+ GPRINT:idle:AVERAGE:"Avg\\: %3.2lf" \
+ GPRINT:idle:MIN:"Min\\: %3.2lf" \
+ GPRINT:idle:MAX:"Max\\: %3.2lf"
+
+report.empire.cpupctnowait.name=SystemEDGE CPU Totals (no wait)
+report.empire.cpupctnowait.columns=nhCpuTotalIdlePct,nhCpuTotalUserPct,nhCpuTotalSysPct
+report.empire.cpupctnowait.type=nodeSnmp
+report.empire.cpupctnowait.command=--title="SystemEDGE CPU Totals (no wait)" \
+ --lower-limit 0 --upper-limit 100 --rigid --vertical-label="Percent CPU" \
+ DEF:idle={rrd1}:nhCpuTotalIdlePct:AVERAGE \
+ DEF:user={rrd2}:nhCpuTotalUserPct:AVERAGE \
+ DEF:system={rrd3}:nhCpuTotalSysPct:AVERAGE \
+ AREA:user#0000ff:"User  " \
+ GPRINT:user:AVERAGE:"Avg\\: %3.2lf" \
+ GPRINT:user:MIN:"Min\\: %3.2lf" \
+ GPRINT:user:MAX:"Max\\: %3.2lf\\n" \
+ STACK:system#ffff00:"System" \
+ GPRINT:system:AVERAGE:"Avg\\: %3.2lf" \
+ GPRINT:system:MIN:"Min\\: %3.2lf" \
+ GPRINT:system:MAX:"Max\\: %3.2lf\\n" \
+ STACK:idle#00ff00:"Idle  " \
+ GPRINT:idle:AVERAGE:"Avg\\: %3.2lf" \
+ GPRINT:idle:MIN:"Min\\: %3.2lf" \
+ GPRINT:idle:MAX:"Max\\: %3.2lf"
+
+report.empire.pgmon.procs.name=Process Group Process Count (SystemEDGE)
+report.empire.pgmon.procs.columns=pgmonNumProcs
+report.empire.pgmon.procs.type=pgmonIndex
+report.empire.pgmon.procs.command=--title="Process Group Process Count (SystemEDGE)" \
+ --lower-limit=0 --vertical-label="Processes" \
+ DEF:procs={rrd1}:pgmonNumProcs:AVERAGE \
+ AREA:procs#00ff00:"Processes" \
+ GPRINT:procs:AVERAGE:"Avg\\: %8.2lf" \
+ GPRINT:procs:MIN:"Min\\: %8.2lf" \
+ GPRINT:procs:MAX:"Max\\: %8.2lf\\n"
+
+report.empire.pgmon.threads.name=Process Group Thread Count (SystemEDGE)
+report.empire.pgmon.threads.columns=pgmonThreadCount
+report.empire.pgmon.threads.type=pgmonIndex
+report.empire.pgmon.threads.command=--title="Process Group Thread Count (SystemEDGE)" \
+ --lower-limit=0 --vertical-label="Threads" \
+ DEF:threads={rrd1}:pgmonThreadCount:AVERAGE \
+ AREA:threads#00ff00:"Threads" \
+ GPRINT:threads:AVERAGE:"Avg\\: %8.2lf" \
+ GPRINT:threads:MIN:"Min\\: %8.2lf" \
+ GPRINT:threads:MAX:"Max\\: %8.2lf\\n"
+
+report.empire.pgmon.memory.name=Process Group Memory Size (SystemEDGE)
+report.empire.pgmon.memory.columns=pgmonSize,pgmonRSS
+report.empire.pgmon.memory.type=pgmonIndex
+report.empire.pgmon.memory.command=--title="Process Group Memory Size (SystemEDGE)" \
+ --lower-limit=0 --vertical-label="Size" \
+ DEF:size={rrd1}:pgmonSize:AVERAGE \
+ DEF:rss={rrd2}:pgmonRSS:AVERAGE \
+ AREA:size#00ff00:"Memory Size      " \
+ GPRINT:size:AVERAGE:"Avg\\: %8.2lf" \
+ GPRINT:size:MIN:"Min\\: %8.2lf" \
+ GPRINT:size:MAX:"Max\\: %8.2lf\\n" \
+ LINE2:rss#0000ff:"Resident Set Size" \
+ GPRINT:rss:AVERAGE:"Avg\\: %8.2lf" \
+ GPRINT:rss:MIN:"Min\\: %8.2lf" \
+ GPRINT:rss:MAX:"Max\\: %8.2lf"
+
+report.empire.pgmon.mempct.name=Process Group Memory Utilization (SystemEDGE)
+report.empire.pgmon.mempct.columns=pgmonMEM
+report.empire.pgmon.mempct.type=pgmonIndex
+report.empire.pgmon.mempct.command=--title="Process Group Memory Utilization (SystemEDGE)" \
+ --lower-limit 0 --upper-limit 100 --rigid --vertical-label="% System Memory" \
+ DEF:util={rrd1}:pgmonMEM:AVERAGE \
+ AREA:util#00ff00:"Memory Utilization" \
+ GPRINT:util:AVERAGE:"Avg\\: %8.2lf" \
+ GPRINT:util:MIN:"Min\\: %8.2lf" \
+ GPRINT:util:MAX:"Max\\: %8.2lf"
+
+report.empire.pgmon.pagefaults.name=Process Group Page Faults (SystemEDGE)
+report.empire.pgmon.pagefaults.columns=pgmonMajorPgFlts
+report.empire.pgmon.pagefaults.type=pgmonIndex
+report.empire.pgmon.pagefaults.command=--title="Process Group Page Faults (SystemEDGE)" \
+ --lower-limit 0 --vertical-label="Page Faults" \
+ DEF:pgfaults={rrd1}:pgmonMajorPgFlts:AVERAGE \
+ AREA:pgfaults#ff0000:"Major" \
+ GPRINT:pgfaults:AVERAGE:"Avg\\: %8.2lf" \
+ GPRINT:pgfaults:MIN:"Min\\: %8.2lf" \
+ GPRINT:pgfaults:MAX:"Max\\: %8.2lf"
 
 ######
 ###### Reports Generated for Extreme Devices
